# lazyconfig

./: AGENTS.md  Cargo.toml  plan.md
src/: actions.rs  main.rs  state.rs  theme.rs
src/components/: badge.rs  button.rs  filter_bar.rs  mod.rs  split_view.rs  tabs.rs  text_area.rs  text_input.rs
src/models/: agent.rs  mcp.rs  mod.rs  platform.rs  project.rs  rule.rs  skill.rs
src/services/: mod.rs  parser.rs  project_detector.rs  scanner.rs  validator.rs  writer.rs
src/views/: agent_list.rs  create_dialog.rs  detail_panel.rs  main_view.rs  mcp_list.rs  mod.rs  sidebar.rs  skill_list.rs
