[package]
name = "lazyconfig"
version = "0.1.0"
edition = "2021"
authors = ["lazyconfig contributors"]
description = "A desktop app to manage AI coding agent configuration"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
regex = "1.10"
walkdir = "2.5"
anyhow = "1.0"
dirs = "5.0"
gpui = "0.2.2"
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
